# COMP3400-a9-zhengs3atwit

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt  parta.c  parta.h  partb.c  partc-sample.c  partc.c  partc.h
tests/: parta.bats  partb.bats  partc.bats
